xp-maven-plugin (3.1.4)

  * Fix the "test-package" goal

 -- Marius Rosoiu <marius.rosoiu@1and1.ro> Thu, 20 Sep 2012

xp-maven-plugin (3.1.3)

  * change artifact id from 'net.xp-framework:language' to 'net.xp-framework:compiler'

 -- Marius Rosoiu <marius.rosoiu@1and1.ro> Tue, 18 Sep 2012

xp-maven-plugin (3.1.2)

  * change default unittest ini files location to 'src/test/ini'
  * add ${project.classifier} property to specify project classifier

 -- Marius Rosoiu <marius.rosoiu@1and1.ro> Tue, 18 Sep 2012

xp-maven-plugin (3.1.1)

  * fix bootstrap when building XP-Framework itself
    - add ${xp.compile.phpIncludePattern} and ${xp.compile.testPhpIncludePattern}

 -- Marius Rosoiu <marius.rosoiu@1and1.ro> Tue, 24 Jul 2012

xp-maven-plugin (3.1.0)

  * add support for using isolated enviroment (use specific XP version)
    - setup classpath via .pth files not via -cp parameter
    - bootstraping via project dependencies
    - bootstraping via project resources (to build XP-Framework itself)
    - use separate classpath (project.pth) for each target: compile, test, xp

  * add support to build full applications zip
    - use java-xarlib instead of the "xar" XP-Runner to manipulate XAR archives
    - add support for reading/creating ZIP artifacts
    - add ${xp.package.*} flags to control the packaging phase

  * naming cleanup
    - rename namespace from "net.xp_forge.maven.plugins.xpframework" to "net.xp_forge.maven.plugins.xp"
    - rename @parameters to ${xp.*.*}

  * add support for building XP-Framework using its own resources
  * add support for !patch dependencies
  * fix some Sonar warnings

 -- Marius Rosoiu <marius.rosoiu@1and1.ro> Tue, 24 Jul 2012

xp-maven-plugin (3.0.0)

  * update pom.xml:
    - change <artifactId> from "maven-xpframework-plugin" to "xp-maven-plugin"

 -- Marius Rosoiu <marius.rosoiu@1and1.ro> Tue, 26 Jun 2012

maven-xpframework-plugin (2.0.0)

  * update pom.xml: